tests/ui/invalid_type_wch.stderr
error: unexpected wchar type `f32`, expected one of: u16, u32, i16, i32
 --> $DIR/invalid_type_wch.rs:3:30
  |
3 | const INVALID: &[f32] = wch!(f32, "oops");
  |                              ^^^
